2006-04-03  Maciej Stachowiak  <mjs@apple.com>

        - removed this draft, all changes are folded into the master copy now

        * source/ED-window-20060306.xml: Removed.

2006-03-30  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml: Updated for many of Ian Hickson's review comments.
        
        Regenerated:
        
        * publish/Window.html:
        * publish/respec-w3c.css:

2006-03-27  Maciej Stachowiak  <mjs@apple.com>

        - replaced refereces to fictitious core:: IDL module with dom::
        - properly qualified DOMStrings as dom::DOMString

        * publish/Window.html:
        * source/Window.xml:

2006-03-26  Maciej Stachowiak  <mjs@apple.com>

        - completed acknowledgements (I think I got everyone who made a
          suggestion that was actually taken)
        - improved use of dfn/term
        - marked informative sections as such properly
        - added explanation of styling for definitions and def references
        
        * source/Window.xml:
        
        Regenerated:
        
        * publish/Window.html:
        * publish/respec-w3c.css:

2006-03-25  Anne van Kesteren  <annevk@opera.com>

        * source/Window.xml: changed the language, markup, reformatted and
        fixed the CDR section and made some small editorial changes

2006-03-25  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml:
        - added Anne's text for the Embedding section
        
        * publish/Window.html: regenerated

2006-03-24  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml:
        - added a new conformace class, "conforming Java implementation", and a placeholder Java appendix
        - replaced many "need a cross reference" ednotes with bibliography references
        - added remaining attribute and method descriptions from Ian Davis's draft
        - started converting more of the attribute descriptions to conformance requirements 
        - a bunch of reformatting and rewording