@@ -6,7 +6,7 @@
           regenerated.
           ******* WARNING ********
         --><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.9 2006-03-30 19:25:26 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>30 March 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
+<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.10 2006-04-05 07:11:15 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>30 March 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
         <a href="http://www.w3.org/"><acronym title="World Wide Web Consortium">W3C</acronym></a><sup>®</sup>
         (<a href="http://www.csail.mit.edu/"><acronym title="Massachusetts Institute of Technology">MIT</acronym></a>,
         <a href="http://www.ercim.org/"><acronym title="European Research Consortium for Informatics and Mathematics">ERCIM</acronym></a>,
@@ -111,7 +111,7 @@
     <div class="section"><h3 id="usage">1.1. Examples of usage</h3><p><strong>This section is not normative normative.</strong></p>
       
 
-      <div class="ednote">Need to fill this in.</div>
+      <div class="ednote">ACTION-129: Write Window Object 1.0 "examples of usage" section.</div>
     </div>
 
     <div class="section"><h3 id="notcovered">1.2. Not in This Specification</h3><p><strong>This section is not normative normative.</strong></p>
@@ -125,8 +125,8 @@
       </p>
 
       <ul>
-      <li>History <div class="ednote">(may have to reconsider this)</div></li>
-      <li>Access to frames by name <div class="ednote">(may have to reconsider this)</div></li>
+      <li>History <div class="ednote">ISSUE-59: Should Window 1.0 include history?</div></li>
+      <li>Access to frames by name <div class="ednote">ISSUE-60: Should Window Object 1.0 include access to frames by name (window.frames)?</div></li>
       <li>Opening new windows</li>
       <li>Manipulating UI of existing windows</li>
       <li>Window size and position information</li>
@@ -222,7 +222,7 @@
   <div class="section"><h2 id="browsing">2. Browsing Contexts</h2>
     
 
-    <div class="ednote">Need to define the term "document"?</div>
+    <div class="ednote">ACTION-130: Need to add definition of "document"</div>
 
     <p>
       A <dfn id="dfn-browsing-context">browsing context</dfn> is a place where a user agent
@@ -255,12 +255,8 @@
       is the <dfn id="dfn-default-view">default view</dfn>. The <a class="term" href="#dfn-default-view">default view</a> is
       typically the primary mode of presentation to the user, and in
       interactive user agents, the primary means of interaction for
-      the user. <div class="ednote">Are there any UAs out there that implement
-      AbstractViews and actually have multiple views? In this case do
-      all the views implement the <a class="term" href="#dfn-window-interface"><code>Window</code> interface</a>, or only the
-      primary view? Maybe we shouldn't specify too much about multiple
-      views unless we can find actual implementations of
-      this.</div>
+      the user. <div class="ednote">ISSUE-61: Should the Window spec drop any conformance 
+      requirements for AbstractViews besides the defaultView?</div>
     </p>
 
     <p>
@@ -285,12 +281,11 @@
       is dispatched on any node in a <code>Document</code> presented in a
       <a class="term" href="#dfn-browsing-context">browsing context</a>, the value of the <code>view</code> attribute of the
       event <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be the <code>Window</code> object where the user originated the
-      event. <div class="ednote">Should we specify how the Window is actually part
-      of the capture and bubble phases of DOM event dispatch?  Should
-      we specify anything about events at all? Maybe all event
-      considerations should be deferred to a future Window Events
-      spec. And the particular requirement on UIEvent here appears to
-      duplicate what DOM Level 2 Views already says.</div>
+      event. 
+
+<div class="ednote">ISSUE-63: Should Window 1.0 drop the arguably redundant requirment on UIEvent.view?</div>
+
+<div class="ednote">ISSUE-64: Should the Window spec define Window's place in DOM event flow?</div>
     </p>
 
     <div class="section"><h3 id="window">2.1. The <code>Window</code> Interface, Basic Attributes</h3>
@@ -304,10 +299,10 @@
       <p>The <a class="term" href="#dfn-window-interface"><code>Window</code> interface</a> inherits from
       the <code>AbstractView</code> interface [<cite><a href="#DOM2Views" class="bibref">DOM2Views</a></cite>].</p>
 
-      <div class="ednote">Should we give a requirement or explanatory note here
-      that if you implement CSSOM then the <code>Window</code> and
-      <code>ViewCSS</code> interfaces should be implemented by the
-      same object?</div>
+      <p>In implementations that support Document Object Model CSS
+      from DOM Level 2 Views [<cite><a href="#DOM2Views" class="bibref">DOM2Views</a></cite>], every
+      <a class="term" href="#dfn-window-object"><code>Window</code> object</a> <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> also implement the
+      <code>ViewCSS</code> interface.</p>
 
       <div class="boxed"><p><span class="idlTitle"></span></p><pre class="schema" title="">
 
@@ -351,8 +346,8 @@ interface Window : views::AbstractView {
             is a self-reference. Consequently, the value of the <a class="term" href="#dfn-self-attribute"><code>self</code> 
             attribute</a> <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be the same object as the <a class="term" href="#dfn-window-attribute"><code>window</code> 
 	    attribute</a>.
-            <div class="ednote">
-	      Need to define "being the same object" in such a way
+
+            <div class="ednote">ACTION-131: Need to define "being the same object" in such a way
 	      that it is an equivalence relation. Then the second
 	      conformance clause for "self" can just be a note.
             </div>
@@ -386,7 +381,7 @@ interface Window : views::AbstractView {
       defines only the most basic methods and attributes of the
       <code>Window</code> interface.</p>
 
-<div class="ednote">Should we also specify the parentWindow property? It is
+<div class="ednote">ISSUE-65: Should we also specify the parentWindow property? It is
 effectively a synonym for defaultView but implemented by a different
 set of UAs.</div>
 
@@ -406,13 +401,10 @@ interface DocumentWindow : views::DocumentView {
         implement the <code>Window</code> interface. If a document is
 	not being presented in a <a class="term" href="#dfn-browsing-context">browsing context</a> but nontheless
 	implements the DocumentWindow interface, the value of the
-        <code>defaultView</code> attribute <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be <code>null</code>. <div class="ednote">Is
-        this reasonably testable?  There are ways (XMLHttpRequest, DOM
-        3 L&amp;S, xml data islands, DOMParser) in browser-like UAs to
-        have a document that's not being presented in a browsing
-        context, but how to test this?  Maybe the spec just shouldn't
-        say anything about documents not presented in a browsing
-        context.</div>
+        <code>defaultView</code> attribute <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be
+        <code>null</code>. <div class="ednote">ISSUE-66: should Documents that
+        aren't being presented be required to have a null
+        defaultView?</div>
       </p>
     </div>
 
@@ -525,12 +517,14 @@ interface Location {
 
         <dd>
           The value of the <code>href</code> attribute <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be the
-          absolute URI reference [<cite><a href="#RFC2396" class="bibref">RFC2396</a></cite>] that is the Location's
-          current location. When the <code>href</code> attribute is
-          set, the Location's window <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> <em>navigate</em> to the newly set value.
-	  <div class="ednote">Must define the term navigate</div>
-	  <div class="ednote">Should resulution of relative URI references be
-	  defined here or in the bindings?</div>
+          absolute URI reference [<cite><a href="#RFC2396" class="bibref">RFC2396</a></cite>] <div class="ednote">use newer URI
+          RFC?</div> that is the Location's current location. When
+          the <code>href</code> attribute is set, the Location's
+          window <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> <em>navigate</em> to the newly set value.
+          <div class="ednote">Must define the term navigate</div>
+          <div class="ednote">ISSUE-67: Should resolution of relative URI
+          references sent to location be defined in JS bindings or
+          generally?</div> 
         </dd>
 
         <dt><dfn id="dfn-hash">hash</dfn></dt>
@@ -541,10 +535,8 @@ interface Location {
           this attribute <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be the string concatenation of the hash
           mark(#) and the fragment identifier. Otherwise, the value of
           the <code>hash</code> attribute <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be the empty
-          string. <div class="ednote">what about non-HTTP? -- I think fragment IDs
-          should apply to all URI schemes.</div> When this atribute is
-	  set to a new value <var>new-hash</var>, user agents <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> perform
-	   the following steps:
+          string. When this atribute is set to a new value <var>new-hash</var>, 
+	  user agents <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> perform the following steps:
 	  <ol>
 	  <li>Give the hash attribute the value <var>new-hash</var>.</li>
 	  <li><em>Reconstruct the location URI</em><div class="ednote">Need to define the
@@ -615,7 +607,7 @@ rewritten to state conformance requirements. In the manner of the above.</div>
 
         <div class="ednote">Need description for assign.</div>
 
-	<div class="ednote">Need description for toString, if we specify that. It
+	<div class="ednote">ISSUE-68: Need description for toString, if we specify that. It
 	has the same value as href; not all implementations have this
 	explicitly but toString is always available in ECMAScript, and
 	probably this should be explicit for the sake of Java. Or we
@@ -624,12 +616,12 @@ rewritten to state conformance requirements. In the manner of the above.</div>
 
         <dt><dfn id="dfn-replace(url)">replace(<var>url</var>)</dfn></dt>
         <dd>This function replaces the current history entry with the
-         <var>url</var> specified. <div class="ednote">we haven't specified history - but we
+         <var>url</var> specified. <div class="ednote">ISSUE-59: we haven't specified history - but we
          need to if we are to support this</div></dd>
 
         <dt><dfn id="dfn-reload()">reload()</dfn></dt>
         <dd>This function forces the host application to reload the resource
-         identified by the Location. <div class="ednote">Netscape used to allow a bool
+         identified by the Location. <div class="ednote">ISSUE-69: Netscape used to allow a bool
          argument to force an unconditional GET from the network</div></dd>
      </dl>
      </div>
@@ -813,6 +805,8 @@ interface TimerListener {
     // what to put here?
 };</pre></div>
 
+    <div class="ednote">ISSUE-70: what to do about timers?</div>
+
     <div class="ednote">Need to define this. In ES bindings, a function or string is the only thing allowed.</div>
 
     </div>
@@ -822,8 +816,7 @@ interface TimerListener {
   <div class="section"><h2 id="security">6. Security Considerations</h2>
     
 
-    <div class="ednote">
-<p>My current plan for the "security considerations" section is that it will contain the following:</p>
+    <div class="ednote"><p>My current plan for the "security considerations" section is that it will contain the following:</p>
 
 <ul>
 <li>Non-normative statements of fact about various security vulnerabilities that may affect Window implementations (unauthorized data access, phishing/pharming, frame injection, etc).</li>
