@@ -1,3 +1,9 @@
+2006-04-04  Maciej Stachowiak  <mjs@apple.com>
+
+        * source/Window.xml: Added ISSUE and ACTION numbers for many editor's
+        notes.
+        * publish/Window.html: Regenreated.
+
 2006-04-03  Maciej Stachowiak  <mjs@apple.com>
 
         - removed this draft, all changes are folded into the master copy now
